tests/snapshots/integration__end_to_end_block_expr.snap
---
source: tests/integration.rs
expression: result.unwrap()
---
Full compilation successful: 25 tokens processed
