tests/snapshots/integration__end_to_end_function_calls.snap
---
source: tests/integration.rs
expression: result.unwrap()
---
Full compilation successful: 44 tokens processed
