tests/snapshots/integration__end_to_end_main.snap
---
source: tests/integration.rs
expression: result.unwrap()
---
Full compilation successful: 64 tokens processed
