tests/snapshots/integration__end_to_end_simple_arithmetic.snap
---
source: tests/integration.rs
expression: result.unwrap()
---
Full compilation successful: 42 tokens processed
