tests/snapshots/integration__end_to_end_type_mismatch_error.snap
---
source: tests/integration.rs
expression: result.unwrap_err()
---
Analysis failed: 
 [97m● [1m[31merror[0m[2m[Analysis][0m: [1;97mType mismatch: expected Primitive(Bool), got Primitive(I32)[0m[0m
 ├ src/compiler/error.rs:212
 ├ test.vt:2:19-20
 ╰ [1;32mhelp:[0m Ensure the types match or add an explicit conversion
━━
 [97m● [1m[31merror[0m[2m[Analysis][0m: [1;97mUnresolved identifier 'b'[0m[0m
 ├ src/compiler/error.rs:212
 ├ test.vt:3:12-12
 ╰ [1;32mhelp:[0m This identifier or symbol was not found in the current scope
