tests/snapshots/integration__end_to_end_unary_ops.snap
---
source: tests/integration.rs
expression: result.unwrap()
---
Full compilation successful: 38 tokens processed
