tests/snapshots/integration__end_to_end_undefined_function_error.snap
---
source: tests/integration.rs
expression: result.unwrap_err()
---
Analysis failed: DiagnosticCollection { diagnostics: [Diagnostic { severity: Error, message: "Unresolved function 'nonexistent'", span: Some(DisplaySpan { file: "test.vt", start: (2, 12), end: (2, 26) }), phase: Analysis, help: Some("This identifier or symbol was not found in the current scope"), note: None }] }
