tests/snapshots/integration__end_to_end_undefined_variable_error.snap
---
source: tests/integration.rs
expression: result.unwrap_err()
---
Analysis failed: 
 [97m● [1m[31merror[0m[2m[Analysis][0m: [1;97mUnresolved identifier 'x'[0m[0m
 ├ src/compiler/error.rs:212
 ├ test.vt:2:12-12
 ╰ [1;32mhelp:[0m This identifier or symbol was not found in the current scope
