tests/snapshots/integration__pipeline_complex_expression.snap
---
source: tests/integration.rs
expression: result.unwrap()
---
Full compilation successful: 43 tokens processed
