tests/snapshots/integration__pipeline_multiple_functions.snap
---
source: tests/integration.rs
expression: result.unwrap()
---
Full compilation successful: 82 tokens processed
